# mec-radar

./: .env.example  .gitignore  CLAUDE.md  MEMCOIN_RESEARCH_RU.md  MEMCOIN_TRADING_SYSTEM_V2.md  docker-compose.yml  ecosystem.config.cjs  pyproject.toml  setup-mcp.sh
.amazonq/skills/: marketing-psychology
.antigravity/skills/: ab-test-setup
.bolt/skills/: schema-markup
.claude/: settings.json
.claude/agents/: api-designer.md  code-reviewer.md  database-optimizer.md  deployment-engineer.md  documentation-writer.md  frontend-developer.md  security-reviewer.md  ui-reviewer.md
.claude/commands/: catchup.md  deploy-check.md  landing.md  new-feature.md  plan.md  review.md  sec-scan.md  ui-check.md
.claude/hooks/: protect-files.sh
.claude/rules/: api-conventions.md  frontend.md  security.md  testing.md
.clawdbot/skills/: launch-strategy
.cline/skills/: content-strategy
.codebuddy/skills/: free-tool-strategy  programmatic-seo
.continue/skills/: page-cro
.cursor/skills/: popup-cro  product-marketing-context
.gemini/skills/: analytics-tracking  copywriting
.kiro/skills/: marketing-ideas
.lovable/skills/: email-sequence
.opencode/skills/: signup-flow-cro
.pi/skills/: copy-editing
.playcode/skills/: form-cro
.serena/: project.yml
alembic/: env.py
config/: settings.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: analyze_outcomes.py  auto_calibrate.py  backtest_scoring.py  compare_scoring_models.py  health_check.py  overnight_report.py  start.sh  stop.sh
src/: main.py
tests/: conftest.py
(+298 files in other folders)
