[tool.poetry]
name = "memcoin-trader"
version = "0.1.0"
description = "Automated Solana memecoin trading bot with smart wallet following"
authors = []
readme = "README.md"
packages = [{include = "src"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.11"

# Core async
httpx = "^0.28"

# Database
sqlalchemy = {version = "^2.0", extras = ["asyncio"]}
asyncpg = "^0.30"
alembic = "^1.14"

# Redis
redis = {version = "^5.0", extras = ["hiredis"]}

# Config + validation
pydantic = "^2.0"
pydantic-settings = "^2.0"

# Logging
loguru = "^0.7"

# gmgn.ai Cloudflare bypass
tls-client = "^1.0"
fake-useragent = "^2.0"

# Telegram bot
aiogram = "^3.17"

# Web dashboard
fastapi = "^0.115"
uvicorn = {version = "^0.34", extras = ["standard"]}
python-jose = {version = "^3.3", extras = ["cryptography"]}
bcrypt = "^4.0"
slowapi = "^0.1"

# WebSocket
websockets = "^14.0"

# Solana (Meteora DBC decoder)
solders = "^0.27"

# Chainstack gRPC (Yellowstone Geyser)
grpcio = "^1.68"
protobuf = ">=5.0"
base58 = ">=2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = ">=0.25.1"
ruff = "^0.9"
mypy = "^1.13"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
